[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music_source_separation_training"
version = "0.1.0"
description = "Forked Music Source Separation Training by ZFTurbo"
readme = "README.md"
authors = [
  { name="Samuel Fischmann", email="sam@musikhack.com" },
]
requires-python = ">=3.8"

dependencies = [
  "torch>=2.0.1",
  "torchaudio",
  "numpy",
  "pandas",
  "scipy",
  "soundfile",
  "ml_collections",
  "tqdm",
  "segmentation-models-pytorch==0.3.3",
  "timm==0.9.2",
  "audiomentations==0.24.0",
  "pedalboard~=0.8.1",
  "omegaconf==2.2.3",
  "beartype==0.14.1",
  "rotary_embedding_torch==0.3.5",
  "einops==0.8.1",
  "librosa",
  "demucs==4.0.0",
  "transformers~=4.35.0",
  "torchmetrics==0.11.4",
  "spafe==0.3.2",
  "protobuf==3.20.3",
  "torch_audiomentations",
  "asteroid==0.7.0",
  "auraloss",
  "torchseg",
  "bitsandbytes",
  "wandb",
  "accelerate",
  "huggingface-hub>=0.23.0",
  "prodigyopt",
  "torch_log_wmse",
  "loralib",
  "pyaudio",
  "wxpython==4.2.2",
  "keyboard",
  "matplotlib",
  "hyper_connections==0.1.11",
  "sageattention==1.0.6",
]

[project.urls]
Homepage = "https://github.com/Musik-Hack/Music-Source-Separation-Training"

[tool.setuptools]
packages = ["gui", "models", "configs"]
